<resources>
  <string name="app_name">Android Toy Demo</string>
  <string name="broadcast_started_msg">Broadcast receiver started</string>
  <string name="broadcast_stopped_msg">Broadcast receiver stopped</string>
  <string name="register_broadcast_button">注册广播</string>
  <string name="unregister_broadcast_button">注销广播</string>
  <string name="send_broadcast_button">发送广播</string>
  <string name="download">下载图片</string>
  <string name="download_modal_title">确认下载</string>
  <string name="download_modal_msg">点击确定下载图片</string>
  <string name="ok_text">确定</string>
  <string name="cancel_text">取消</string>
  <string name="image_name">图片</string>
</resources>
